--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                       <div class="about-info">
                         <p><span class="title-s">Nom: </span> <span>Lefevre</span></p>
                         <p><span class="title-s">Prénom: </span> <span>Amaury </span></p>
-                        <p><span class="title-s">Profil: </span> <span>Etudiant à l'ORT Daniel Mayer</span></p>
+                        <p><span class="title-s">Profil: </span> <span>Elève en cycle préparatoire à l'ESIEA</span></p>
                         <p><span class="title-s">Email: </span> <span><a href="mailto:amaury.lefevre@outlook.fr">amaury.lefevre@outlook.fr</a></span></p>
                         <p><span class="title-s">Téléphone: </span> <span><a href="tel:0630328111">06 30 32 81 11</a></span></p>
                         <p><span class="title-s">Langues: </span> <span>
@@ -140,7 +140,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Je suis étudiant actuellement en BTS d'informatique à l'école ORT Daniel Mayer en SLAM, Solutions Logiciels et Applications Mobile.
+                      Je suis actuellement en cycle préparatoire de cursus Ingénieur à l'Esiea Ivry sur Seine.
                       Je suis discipliné, sérieux, créatif ayant pour passions le sport, l'informatique et les jeux vidéos en hobbies.
                       Je suis donc capable de m'impliquer, peu importe l'importance de la tâche. La détermination est primordiale.
                     </p>
@@ -172,7 +172,7 @@
                 Parcours
               </h3>
               <p class="subtitle-a">
-               Mon parcours scolaire depuis la Troisième.
+               Mon parcours scolaire depuis la Terminale.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -185,11 +185,11 @@
                 <span class="ico-circle"><img src="images/briefcase-fill.png"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Troisième</h2>
+                <h2 class="s-title">Terminale</h2>
                 <p class="s-description text-center">
-                 Collège: Les-Gâtines René Cassin <br>
-                  Années: 2014-2019 <br>
-                  Diplôme: Brevet des Collèges
+                  Lycée: Lycée Jean-Baptiste Corot <br>
+                  Années: 2019-2022 <br>
+                  Diplôme: Bac Général spécialités Mathématiques/Physique-Chimie
                 </p>
               </div>
             </div>
@@ -200,11 +200,11 @@
                 <span class="ico-circle"><img src="images/card-checklist.png"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Lycée</h2>
+                <h2 class="s-title">BTS </h2>
                 <p class="s-description text-center">
-                  Lycée: Jean-Baptiste Corot <br>
-                  Années: 2019-2022 <br>
-                  Diplôme: Baccaloréat Général
+                  Ecole: Ort Daniel Mayer <br>
+                  Années: 2022-2024 <br>
+                  Diplôme: BTS SIO en Programmation
                 </p>
               </div>
             </div>
@@ -215,11 +215,11 @@
                 <span class="ico-circle"><img src="images/bar-chart-line-fill.png"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">BTS SIO</h2>
+                <h2 class="s-title">Ingénieur</h2>
                 <p class="s-description text-center">
-                  Ecole: ORT Daniel Mayer<br>
-                  Années: 2022-2024 <br>
-                  Diplôme: BTS Informatique
+                  Ecole: Esiea Ivry Sur Seine<br>
+                  Années: 2024-2029 <br>
+                  Diplôme: Diplôme d'Ingénieur
                 </p>
               </div>
             </div>
@@ -420,7 +420,7 @@
           </div>
           <div class="col-md-4"  style="height: 70.5vh;">
             <div class="work-box" style="height: 70.5vh;">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtJava.html">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtWeb.html">
                 <div class="work-img" style="height: 56vh;">
                   <img src="images/HelpOrtWeb.png" alt="" class="img-fluid" style="height: 60vh;">
                 </div>
@@ -435,7 +435,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="HelpOrtJava.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                      <a href="HelpOrtWeb.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
