--- a/Projets/CetaBot.html
+++ b/Projets/CetaBot.html
@@ -10,17 +10,17 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
 
 </head>
@@ -31,20 +31,20 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">PorFolio</a></h1>
+      <h1 class="logo"><a href="../index.html">PorFolio</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">A Propos</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Parcours</a></li>
-          <li><a class="nav-link scrollto" href="index.html#work">Projets</a></li>
+          <li><a class="nav-link scrollto " href="../index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#about">A Propos</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#services">Parcours</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#work">Projets</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="stage1.html">Première Année</a></li>
-              <li><a href="stage2.html">Deuxième Année</a></li>
+              <li><a href="../Stages/stage1.html">Première Année</a></li>
+              <li><a href="../Stages/stage2.html">Deuxième Année</a></li>
 
             </ul>
           </li>
@@ -56,7 +56,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+  <div class="hero hero-single route bg-image" style="background-image: url(../assets/img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -64,7 +64,7 @@
           <h2 class="hero-title mb-4">Ceta Bot</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="breadcrumb-item active">CetaBot</li>
           </ol>
@@ -86,10 +86,10 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="images/CetaBot.png" alt="">
+                  <img src="../images/CetaBot.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="images/idcBotCode.png" alt="">
+                  <img src="../images/idcBotCode.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -125,18 +125,18 @@
 
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="images/plus-circle.png"></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><img src="../images/plus-circle.png"></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 </body>
 
