--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <li><a class="nav-link scrollto " href="#blog">Documents</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="stage1.html">Première Année</a></li>
-              <li><a href="stage2.html">Deuxième année</a></li>
+              <li><a href="Stages/stage1.html">Première Année</a></li>
+              <li><a href="Stages/stage2.html">Deuxième année</a></li>
 
             </ul>
           </li>
@@ -291,114 +291,19 @@
                 Mes Principaux Projets
               </h3>
               <p class="subtitle-a">
-                Les différents projets réalisés durant mon BTS SIO.
+                Les différents projets sur lesquels j'ai travaillé.
               </p>
               <div class="line-mf"></div>
             </div>
           </div>
         </div>
         <div class="row">
+
           <div class="col-md-4">
             <div class="work-box">
-              <a href="images/CetaBot.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="CetaBot.html">
-                <div class="work-img">
-                  <img src="images/CetaBot.png" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Ceta Bot</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Discord Bot</span> / Début: <span class="w-date">Novembre 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="CetaBot.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="IDC.html">
-                <div class="work-img">
-                  <img src="images/IDC.png" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Icon Developpment Center</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Projet d'Entreprise</span> / Début: <span class="w-date">Avril 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="IDC.html"><img src="images/plus-circle.png" style="width: 40px;"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="images/MiidS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage1.html">
-                <div class="work-img">
-                  <img src="images/MiidS.png" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Stage de Première Année</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Stage</span> / Début: <span class="w-date">Mai-Juin 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="stage1.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage2.html">
-                <div class="work-img">
-                  <img src="images/SConnect.jpg" alt="" class="img-fluid"  style="height: 56vh;">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Stage Deuxième Année</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Stage</span> / Début: <span class="w-date">2024</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="stage2.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4"  style="height: 70.5vh;">
-            <div class="work-box" style="height: 70.5vh;">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtJava.html">
-                <div class="work-img" style="height: 56vh;">
-                  <img src="images/HelpOrtJava.png" alt="" class="img-fluid" style="height: 60vh;">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/HelpOrtJava.html">
+                <div class="work-img" style="height: 26vh;">
+
                 </div>
               </a>
               <div class="work-content">
@@ -406,60 +311,12 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">HelpOrt</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Projet Scolaire</span> / Début: <span class="w-date"> Septembre 2023</span>
+                      <span class="w-ctegory">Projet Scolaire SIO</span> /<br> Début: <span class="w-date"> Septembre 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="HelpOrtJava.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4"  style="height: 70.5vh;">
-            <div class="work-box" style="height: 70.5vh;">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtWeb.html">
-                <div class="work-img" style="height: 56vh;">
-                  <img src="images/HelpOrtWeb.png" alt="" class="img-fluid" style="height: 60vh;">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">HelpOrt</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Projet Scolaire</span> / Début: <span class="w-date"> Septembre 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="HelpOrtWeb.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box" style="height: 70.5vh;">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Hackathon.html">
-                <div class="work-img"style="height: 56vh;">
-                  <img src="images/Orange.png" alt="" class="img-fluid"  style="height: 56vh;">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Hackathon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Harmon'IA</span> / Début: <span class="w-date">Décembre 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="Hackathon.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                      <a href="Projets/HelpOrtJava.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
@@ -467,6 +324,205 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/HelpOrtWeb.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">HelpOrt</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet Scolaire SIO</span> /<br> Début: <span class="w-date"> Septembre 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/HelpOrtWeb.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Stages/stage2.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Premier Stage SIO</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Stage</span> /<br> Début: <span class="w-date">2024</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Stages/stage2.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/Hackathon.html">
+                <div class="work-img"style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Hackathon</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Harmon'IA</span> /<br> Début: <span class="w-date">Décembre 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/Hackathon.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Stages/stage2.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Deuxième Stage SIO</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Stage</span> /<br> Début: <span class="w-date">2024</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Stages/stage2.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/CetaBot.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/CetaBot.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Ceta Bot</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Discord Bot</span> /<br> Début: <span class="w-date">Novembre 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/CetaBot.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/IDC.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Esiea Bot</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Robotique</span> / <br> Début: <span class="w-date">Janvier 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/IDC.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/IDC.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">A.A.I</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet d'IA</span> / <br>Début: <span class="w-date">Décembre 2024</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/IDC.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Projets/HelpOrtWeb.html">
+                <div class="work-img" style="height: 26vh;">
+
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">O.S.P</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Projet PAIRSE</span> /<br> Début: <span class="w-date"> Octobre 2024</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Projets/HelpOrtWeb.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
