--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="dossier/Amaury_Lefevre_CV.pdf" download="CV_Amaury_Lefevre"><img src="images/cvHome.png" alt="" class="img-fluid" style="height: 34vh"></a>
+                <a href="dossier/CV_Amaury_LEFEVRE.pdf" download="CV_Amaury_LEFEVRE"><img src="images/cvHome.png" alt="" class="img-fluid" style="height: 34vh"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -526,7 +526,7 @@
                     <h6 class="category">CV</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="dossier/Amaury_Lefevre_CV.pdf" download="CV_Amaury_Lefevre">Mon CV</a></h3>
+                <h3 class="card-title"><a href="dossier/CV_Amaury_LEFEVRE.pdf" download="CV_Amaury_LEFEVRE">Mon CV</a></h3>
                 <p class="card-description">
                   Ce CV est mis à jour que pour le plus important.
                 </p>
