--- a/Stages/stage-1A-Inge.html
+++ b/Stages/stage-1A-Inge.html
@@ -43,8 +43,8 @@
           <li><a class="nav-link scrollto" href="../index.html#work">Projets</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="stage1.html">Première Année</a></li>
-              <li><a href="stage2.html">Deuxième Année</a></li>
+              <li><a href="stage-1A-BTS.html">Première Année</a></li>
+              <li><a href="stage-2A-BTS.html">Deuxième Année</a></li>
 
             </ul>
           </li>
@@ -86,18 +86,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../images/SConnect.jpg" alt="">
+                  <img src="../images/MiidS.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../images/screendevSconnect.png" alt="">
+                  <img src="../images/MiidScreen.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../images/carouselSconnect.png" alt="">
+                  <img src="../images/MiidCodeScreen.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../images/SConnectMentions.png" alt="">
+                  <img src="../images/MentionsMIIDS.png" alt="">
                 </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -107,36 +106,37 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: SouchesConnect</li>
-                <li><strong>Adresse</strong>: 111 rue </li>
-                <li><strong>Forme juridique</strong>: EURL </li>
-                <li><strong>Taille</strong>: Petite Entreprise</li>
-                <li><strong>Effectif</strong>: 1 personne </li>
-                <li><strong>Secteur d’activité</strong>: Sécurité et Réseaux</li>
+                <li><strong>Dénomination</strong>: M.I.I.D Services</li>
+                <li><strong>Adresse</strong>: 60 Rue Boileau, 91600 Savigny-sur-Orge</li>
+                <li><strong>Forme juridique</strong>: SARL </li>
+                <li><strong>Taille</strong>: Petite entreprise</li>
+                <li><strong>Effectif</strong>: 2 personnes</li>
+                <li><strong>Secteur d’activité</strong>: Dentaire et Numérique</li>
+                <li><strong>Capital Social</strong>: 16.000 euros</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-                Après avoir du suspendre le local pendant la pandémie du Coronavirus, Mr. Sylla a relancé ses activités au sein de son entreprise Sconnect. <br>
-                Entre temps, Le directeur Général de l'entreprise a travaillé un temps chez <a href="https://www.megacybersecurity.com">MEGA</a>
+                Après avoir travaillé dans l'industrie nucléaire, Daniel Marques a lancé sa propre entreprise Miid Services.<br>
+                Il s'agit d'une PME qui installe du matériel informatique et dentaires dans les nouveaux cabinets.<br>
               </p>
             </div>
             <div class="portfolio-info">
               <h3>RGPD</h3>
-              <ul>
-                <li>En tant que société dans le domaine de la cyberécurité, Sconnect se doit de respecter les données personnelles de ses clients et de respecter les normes imposées par le RGPD</li>
-              </ul>
+             <ul>
+               <li>
+                 L'entreprise M.I.I.D Service est conformes aux normes dictées par le RGPD.
+               </li>
+             </ul>
             </div>
             <div class="portfolio-info">
               <h3>Ressources Tangibles et Intangibles</h3>
               <ul>
                 <li><strong>Ressources Tangibles</strong></li>
-                <li>Ecrans publicitaires</li>
-                <li>Local</li>
+                <li>Bureaux</li>
                 <li><strong>Ressources Intangibles</strong></li>
                 <li>Site Internet</li>
-                <li>Logiciel "techpub" </li>
               </ul>
             </div>
             <div class="portfolio-info">
@@ -148,9 +148,9 @@
             <div class="portfolio-description">
               <h2>Autres Détails</h2>
               <ul>
-                <li><strong>Thème Principal</strong>: Création d'un site Internet</li>
-                <li><strong>Client</strong>: Sconnect</li>
-                <li><strong>Date du Projet</strong>: 01/2024-02/2024</li>
+                <li><strong>Thème Principal</strong>: Exercice de Refonte du site Internet</li>
+                <li><strong>Client</strong>: M.I.I.D Services</li>
+                <li><strong>Date du Projet</strong>: 05/2023-06/2023</li>
               </ul>
             </div>
           </div>
