--- a/Stages/stage-2A-BTS.html
+++ b/Stages/stage-2A-BTS.html
@@ -43,8 +43,8 @@
           <li><a class="nav-link scrollto" href="../index.html#work">Projets</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="../Stages/stage-1A-BTS.html">Première Année</a></li>
-              <li><a href="../Stages/stage-2A-BTS.html">Deuxième Année</a></li>
+              <li><a href="stage-1A-BTS.html">Première Année</a></li>
+              <li><a href="stage-2A-BTS.html">Deuxième Année</a></li>
 
             </ul>
           </li>
@@ -66,7 +66,7 @@
             <li class="breadcrumb-item">
               <a href="../index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">HelpOrt</li>
+            <li class="breadcrumb-item active">Première Année</li>
           </ol>
         </div>
       </div>
@@ -86,14 +86,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../images/HelpOrtJava.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../images/demandeJava.png" alt="">
+                  <img src="../images/SConnect.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../images/statsHOJava.png" alt="">
+                  <img src="../images/screendevSconnect.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="../images/carouselSconnect.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="../images/SConnectMentions.png" alt="">
                 </div>
 
               </div>
@@ -105,27 +107,50 @@
             <div class="portfolio-info">
               <h3>Identification</h3>
               <ul>
-                <li><strong>Dénomination</strong>: HelpOrt Java</li>
-                <li><strong>Languages</strong>: Java, SQL</li>
-                <li><strong>IDE</strong>: IntelliJ Idea</li>
-                <li><strong>Framework</strong>: Java FXML</li>
+                <li><strong>Dénomination</strong>: SouchesConnect</li>
+                <li><strong>Adresse</strong>: 111 rue </li>
+                <li><strong>Forme juridique</strong>: EURL </li>
+                <li><strong>Taille</strong>: Petite Entreprise</li>
+                <li><strong>Effectif</strong>: 1 personne </li>
+                <li><strong>Secteur d’activité</strong>: Sécurité et Réseaux</li>
               </ul>
             </div>
             <div class="portfolio-info">
               <h3>Historique</h3>
               <p>
-              Ce projet à pour but de créer un forum d'entraide pour les étudiants. <br>
-                Un étudiant dans le besoin poste une demande d'aide pour une matière, et un étudiant plus agé peut lui apporter un soutien.<br>
-                Un administrateur est présent pour gérer les différents soutiens et leur attribuer une salle.
+                Après avoir du suspendre le local pendant la pandémie du Coronavirus, Mr. Sylla a relancé ses activités au sein de son entreprise Sconnect. <br>
+                Entre temps, Le directeur Général de l'entreprise a travaillé un temps chez <a href="https://www.megacybersecurity.com">MEGA</a>
               </p>
+            </div>
+            <div class="portfolio-info">
+              <h3>RGPD</h3>
+              <ul>
+                <li>En tant que société dans le domaine de la cyberécurité, Sconnect se doit de respecter les données personnelles de ses clients et de respecter les normes imposées par le RGPD</li>
+              </ul>
             </div>
             <div class="portfolio-info">
               <h3>Ressources Tangibles et Intangibles</h3>
               <ul>
                 <li><strong>Ressources Tangibles</strong></li>
-                <li>Bureaux</li>
+                <li>Ecrans publicitaires</li>
+                <li>Local</li>
                 <li><strong>Ressources Intangibles</strong></li>
                 <li>Site Internet</li>
+                <li>Logiciel "techpub" </li>
+              </ul>
+            </div>
+            <div class="portfolio-info">
+              <h3>RSE</h3>
+              <ul>
+                <li>La société Sconnect respecte les valeurs de la démarche RSE</li>
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <h2>Autres Détails</h2>
+              <ul>
+                <li><strong>Thème Principal</strong>: Création d'un site Internet</li>
+                <li><strong>Client</strong>: Sconnect</li>
+                <li><strong>Date du Projet</strong>: 01/2024-02/2024</li>
               </ul>
             </div>
           </div>
