--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
           <li><a class="nav-link scrollto " href="#blog">Documents</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="Stages/stage1.html">Première Année</a></li>
-              <li><a href="Stages/stage2.html">Deuxième année</a></li>
-
+              <li><a href="Stages/stage-1A-BTS.html">Première Année</a></li>
+              <li><a href="Stages/stage-2A-BTS.html">Deuxième année</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -298,9 +297,10 @@
           </div>
         </div>
         <div class="row">
+          <!-- ======= Stage Miids Services ======= -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="images/MiidS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage1.html">
+              <a href="images/MiidS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage-1A-BTS.html">
                 <div class="work-img">
                   <img src="images/MiidS.png" alt="" class="img-fluid">
                 </div>
@@ -308,23 +308,24 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Stage de Première Année</h2>
+                    <h2 class="w-title">Stage de Première Année - BTS</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Stage</span> / Dates: <span class="w-date">Mai-Juin 2023</span>
+                      <span class="w-ctegory">Stage</span> / 1 mois: <span class="w-date">Mai-Juin 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="stage1.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                      <a href="stage-1A-BTS.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <!-- ======= Stage Sconnect ======= -->
           <div class="col-md-4">
             <div class="work-box">
-              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage2.html">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage-2A-BTS.html">
                 <div class="work-img">
                   <img src="images/SConnect.jpg" alt="" class="img-fluid"  style="height: 56vh;">
                 </div>
@@ -332,21 +333,46 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Stage Deuxième Année</h2>
+                    <h2 class="w-title">Stage Deuxième Année - BTS</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Stage</span> / Début: <span class="w-date">2024</span>
+                      <span class="w-ctegory">Stage</span> / 1 mois: <span class="w-date"> février 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="stage2.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                      <a href="stage-2A-BTS.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
+          <!-- ======= Stage SCL Massy ======= -->
+          <div class="col-md-4">
+            <div class="work-box">
+              <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage-1A-Inge.html">
+                <div class="work-img">
+                  <img src="images/SConnect.jpg" alt="" class="img-fluid"  style="height: 56vh;">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Stage Première Année - Ingénieur</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Stage</span> / 1 mois: <span class="w-date">juillet 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="stage-1A-Inge.html"><img src="images/plus-circle.png" style="width: 40px;"></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- ======= Projet HelpOrt Java ======= -->
           <div class="col-md-4">
             <div class="work-box">
               <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtJava.html">
@@ -371,6 +397,7 @@
               </div>
             </div>
           </div>
+          <!-- ======= Projet HelpOrt Web ======= -->
           <div class="col-md-4">
             <div class="work-box" style="height: 70.5vh;">
               <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="HelpOrtWeb.html">
@@ -395,6 +422,7 @@
               </div>
             </div>
           </div>
+          <!-- ======= Projet Hackathonb Orange ======= -->
           <div class="col-md-4">
             <div class="work-box">
               <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="Hackathon.html">
@@ -419,7 +447,7 @@
               </div>
             </div>
           </div>
-
+          <!-- ======= Projet Discord Bot ======= -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="images/CetaBot.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="CetaBot.html">
@@ -444,6 +472,7 @@
               </div>
             </div>
           </div>
+          <!-- ======= Projet Esieabot ======= -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="IDC.html">
@@ -468,7 +497,7 @@
               </div>
             </div>
           </div>
-
+          <!-- ======= Projet PST ======= -->
           <div class="col-md-4">
             <div class="work-box">
               <a href="images/IDC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" href="IDC.html">
@@ -479,9 +508,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Tank-epler</h2>
+                    <h2 class="w-title">Projet Scienttifique et Technique</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Projet électronique</span> / Début: <span class="w-date">Novembre 2024</span>
+                      <span class="w-ctegory">Projet électronique</span> / Début: <span class="w-date">Octobre 2025</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
