--- a/Projets/HelpOrtWeb.html
+++ b/Projets/HelpOrtWeb.html
@@ -43,8 +43,8 @@
           <li><a class="nav-link scrollto" href="../index.html#work">Projets</a></li>
           <li class="dropdown"><a href="#"><span>Stages</span></a>
             <ul>
-              <li><a href="../Stages/stage1.html">Première Année</a></li>
-              <li><a href="../Stages/stage2.html">Deuxième Année</a></li>
+              <li><a href="../Stages/stage-1A-BTS.html">Première Année</a></li>
+              <li><a href="../Stages/stage-2A-BTS.html">Deuxième Année</a></li>
 
             </ul>
           </li>
