Remake Partie About p1

--- a/index.html
+++ b/index.html
@@ -104,30 +104,42 @@
                         <p><span class="title-s">Langues: </span> <span>
                           <ul>
                             <li>Français ==> Confirmé (maternelle)</li>
-                             <li>Anglais ==> Assez bon (B1)</li>
-                             <li>Espanol ==> Les bases</li>
-                            <li>Japonais ==> Quelques mots</li>
+                            <li>Anglais ==> TOEIC (855)</li>
+                            <li>Japonais ==> Débutant</li>
+                            <li>Espanol ==> Scolaire</li>
                         </ul></span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Compétences</p>
-                    <span>HTML</span> <span class="pull-right">70%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="title-box-2">
+                      <h5 class="title-left">
+                        Hard Skills
+                      </h5>
                     </div>
-                    <span>CSS</span> <span class="pull-right">50%</span>
+                    <span>HTML</span> <span class="pull-right">85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PHP</span> <span class="pull-right">30%</span>
+                    <span>CSS</span> <span class="pull-right">70%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>PHP</span> <span class="pull-right">40%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>JAVA</span> <span class="pull-right">30%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>C</span> <span class="pull-right">50%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Electronique</span> <span class="pull-right">60%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -150,8 +162,49 @@
                       Je me décrirais comme quelqu'un de curieux, optimiste, dynamique et déterminé.
                       Je fais beaucoup de sport en dehors des cours pour la santé physique et mentale.
                       J'ai la créativité en tête et je redouble d'efforts si j'en manque.
-
                     </p>
+                    <br>
+                    <div class = "spanSkills">
+                      <div class="span-Skills-Left" style="width: 50%; float: left;">
+                        <div class="skill-mf">
+                          <div class="title-box-2">
+                            <h5 class="title-left" style="font-size: 1.6rem;">
+                              Soft Skills
+                            </h5>
+                          </div>
+
+                          <p class="lead" style="margin-top: -5%;">
+                            Travail d'équipe <br>
+                            Respect <br>
+                           Attitude positive <br>
+                          </p>
+                        </div>
+                      </div>
+                      <div class="span-Skills-Right" style="margin-left: 50%;">
+                        <div class="title-box-2">
+                          <h5 class="title-left" style="font-size: 1.6rem;">
+                            Compétences transverses
+                          </h5>
+                        </div>
+                        <p class="lead" style="margin-top: -5%;">
+                          Gestion de Projet <br>
+                          Adaptation <br>
+                          Politesse <br>
+                        </p>
+
+                      </div>
+                    </div>
+                        <div class="title-box-2">
+                          <h5 class="title-left">
+                            Diplômes
+                          </h5>
+                        </div>
+                        <p class="lead">
+                          Baccaloréat : Validé en juin 2022 <br>
+                          BTS : Validé en Juin 2024 <br>
+                          BAFA : En cours d'acquisition. <br>
+                          Ingénieur : En cours d'acquisition. <br>
+                        </p>
                   </div>
                 </div>
               </div>
@@ -352,7 +405,7 @@
             <div class="work-box">
               <a data-gallery="portfolioGallery" class="portfolio-lightbox" href="stage-1A-Inge.html">
                 <div class="work-img">
-                  <img src="images/SConnect.jpg" alt="" class="img-fluid"  style="height: 56vh;">
+                  <img src="images/logo-scl.jpg" alt="" class="img-fluid"  style="height: 56vh;">
                 </div>
               </a>
               <div class="work-content">
